# readerai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  FRONTEND_ARCHITECTURE.md  README.md  bootstrapped_question_optimizer.py  copro_question_optimizer.py  docker-compose.test.yml  docker-compose.yml  hello.py  index.html  main.py  package-lock.json  pyproject.toml  pyrightconfig.json
.github/workflows/: integration-tests.yml
ai_docs/: project_guidelines.md  project_overview.md
ai_docs/meta_prompts/: adr-decision-maker.md  spec-to-adr-prompt.md
ai_docs/specs/001_passage_extractor/: spec.md  streaming_implementation.md  user_guide.md
ai_docs/specs/001_passage_extractor/adrs/: 001_llm_integration_approach.md  002_text_processing_strategy.md  003_passage_data_format.md  004_quality_validation_approach.md
ai_docs/specs/001_passage_extractor/prompts/: implementation_prompt.md
ai_docs/templates/: adr-template.md  prd-template-lean.md  prompt-template.md
ai_docs/tooling/: pre-commit-setup.md
backend/: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  settings.example.yaml
backend/docs/cli/: README.md  infra.md  ingest.md  show-config.md  tts.md
backend/examples/: chapter_detection_example.py  llm_provider_usage.py
backend/integration-tests/: pyproject.toml
backend/integration-tests/tests/: conftest.py  test_api_endpoints.py  test_full_flow.py  test_websocket.py
backend/one-off-scripts/: polly-audio-generation.py  s3-upload.py
backend/readerai/: __version__.py  config.py
backend/readerai/api/: tts.py
backend/readerai/cli/: config.py  extract_chapters.py  extract_passages.py  infra.py  ingest.py  main.py  show_config.py  tts.py
backend/readerai/config/: __init__.py  audio.py  aws.py  database.py  llm.py  server.py  types.py
backend/readerai/flows/: passage_extractor.py  response.py  vocabulary.py
backend/readerai/llm/: __init__.py  client.py
backend/readerai/pipeline/: README.md  __init__.py  chapter_boundary_detector.py  dspy_config.py
backend/readerai/tts/: __init__.py  constants.py  models.py  service.py
backend/readerai/utils/: dspy_config.py
backend/tests/: README.md  conftest.py  test_comprehension.py  test_tts_pure_functions.py
backend/tests/integration/: README.md  test_tts_audio_playback.py  test_tts_service_integration.py
backend/tests/manual/: test-cors.html
docs/: ingestion.md
docs/architecture/: communication-patterns.md  fastapi-websockets-async.md  scaling-websockets.md  session-management.md  single-server-capacity.md
experiments/: aws_polly_tts.py  bootstrapped_question_optimizer.py  copro_question_optimizer.py  miprov2_question_optimizer.py
experiments/createdfiles/: speech_marks.json
frontend/: .env.example  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/.github/workflows/: ci.yml  deploy.yml
frontend/.husky/: pre-commit
frontend/docs/: ARCHITECTURE.md  audio-streaming-fix-summary.md
frontend/public/demo_transcription/: align.csv  align.json  index.html  transcript.txt
frontend/scripts/: analyze-bundle.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts  vite-env.d.ts
frontend/src/app/: hooks.ts
frontend/src/app/middleware/: websocket.ts
frontend/src/config/: constants.ts  providers.ts
frontend/src/features/checkpoints/: index.ts
frontend/src/features/interruptions/: index.ts
frontend/src/hooks/: useMounted.ts  useReadingSession.ts
frontend/src/mocks/: browser.ts  handlers.ts  websocketHandlers.ts
frontend/src/providers/: ProviderContext.tsx  configureProviders.ts
frontend/src/services/: ReadingSessionManager.ts  api.ts  fetchClient.ts  websocket.ts
frontend/src/showcases/: AudioStreamingShowcase.tsx  IntegratedReadingShowcase.tsx  ReadingViewShowcase.tsx  StudentInterruptionShowcase.tsx  WebSocketShowcase.tsx
frontend/src/styles/: globals.css
frontend/src/test/: setup.ts
frontend/tests/: setup.ts
frontend/tests/mocks/: handlers.ts  server.ts
frontend/tests/security/: SecurityBehaviors.test.ts
frontend/tests/unit/: App.test.tsx
infra/: README.md
infra/docs/: architecture.md
infra/scripts/: setup-aws.sh  test-polly.py
infra/terraform/: cloudfront.tf  iam.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  tfplan-update
integration-tests/: Dockerfile  README.md  run_tests.sh
integration-tests/tests/: conftest.py  test_api_endpoints.py  test_full_flow.py
readerai/: config.py  constants.py
readerai/cli/: __init__.py  extract_passages.py  ingest.py  run_comprehension.py  run_vocabulary.py  show_config.py
readerai/flows/: __init__.py  comprehension.py  passage_extractor.py  response.py  vocabulary.py
readerai/tts/: polly.py
readerai/utils/: __init__.py  dspy_config.py  text_chunker.py
rtk-frontend/: README.md  WORKING_STATUS.md  check-audio-flow.md  index.html  test-audio-fix.js  vite.config.ts
rtk-frontend/scripts/: generate-provider.ts
rtk-frontend/src/: App.tsx
rtk-frontend/src/app/: middleware.ts  providers.tsx  store.ts
rtk-frontend/src/config/: features.ts
rtk-frontend/src/mocks/: browser.ts  server.ts  websocketHandlers.ts
rtk-frontend/src/providers/: ProviderContext.tsx  ProviderRegistry.ts  configureProviders.ts  index.ts  types.ts
rtk-frontend/src/showcases/: AudioStreamingShowcase.tsx  IntegratedReadingShowcase.tsx  ReadingControlsShowcase.tsx  StudentInterruptionShowcase.tsx
rtk-frontend/src/styles/: tailwind.css
rtk-frontend/tests/fixtures/: mockData.ts
rtk-frontend/tests/performance/: LoadTesting.test.ts
sample_stories/: tommy_turtle.txt
scripts/: build_and_run.sh  build_and_run_prod.sh
src/readerai/prompts/: hello.py
src/readerai/serve/: main.py
tests/: test_comprehension.py  test_passage_extractor.py
(+112 files in other folders)
