[project]
name = "readerai"
version = "0.1.0"
description = "AI-powered reading companion for children"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.6.3",
    "ipdb>=0.13.13",
    "ipython>=8.32.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.29.0",
]

[tool.setuptools]
packages = ["readerai"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
readerai-passages = "readerai.cli.extract_passages:main"
