[project]
name = "readerai-integration-tests"
version = "0.1.0"
description = "Integration tests for ReaderAI stack"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "websocket-client>=1.7.0",
    "anyio[trio]>=4.0.0",
    "pytest-anyio>=0.0.0",
    "pytest-timeout>=2.2.0",
    "testcontainers>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30

[tool.ruff]
line-length = 100
target-version = "py313"
